fixing the margin of 'calculate' button

--- a/src/index.html
+++ b/src/index.html
@@ -123,17 +123,12 @@
     </div>
 
     <div class="grid md:grid-cols-2 md:gap-6 ml-8 mr-8">
-      <button type="submit" class="mb-3 w-32 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" style="
-      margin-left: 76px;
-      ">Calculate</button>
+      <button type="submit" class="mb-3 w-32 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Calculate</button>
     </div>
   </form>
 
 
-  <ul id="search-results"></ul>
-
-
-
+  <!-- <ul id="search-results"></ul> -->
 
   <script>
     const dropdownSearch = document.getElementById('dropdownSearch');
