Fixing up lot size

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
 
 
 
-    const searchInput = document.getElementById('search-input');
+    const searchInput = document.getElementById('instrument');
     const searchResults = document.getElementById('search-results');
     let results = [
     'EUR/USD',
